--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,100 +1,90 @@
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&display=swap");
 body {
-    background-image: url("/assets/img/Paysage.webp");
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url(../img/Paysage.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.game {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+body main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
 }
 
-h1 {
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+body main .post {
+  background-image: url(../img/panneau1.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vh;
+  height: 130vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-h4{
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-}
-.panneau{
-    grid-area: 1 / 2 / 6 / 4;
-    background-image: url("/assets/img/panneau1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-}
-.img { 
-    grid-area: 2 / 2 / 4 / 4;
-    background-image: url("");
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: center;
+body main .planck {
+  background-image: url(../img/panneau2.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vh;
+  height: 15rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
-.playground { 
-    grid-area: 4 / 2 / 5 / 4; 
-    
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    
+body main .img {
+  padding-right: 30vh;
+  padding-top: 17vh;
 }
 
-.letter { 
-    grid-area: 4 / 2 / 5 / 3; 
-    text-align: center;
-    background-image: url("/assets/img/panneau2.webp");
-    background-repeat: no-repeat;
+.guess {
+  color: black;
+  background-color: burlywood;
+  text-align: center;
 }
 
-.word { 
-    grid-area: 4 / 3 / 5 / 4;
-    text-align: center;
-    background-image: url("/assets/img/panneau2.webp");
-    background-repeat: no-repeat;
-}
-
-.img {
-    text-align: center;
-}
-
-.input {
-    border-radius: 1px;
-    border-color: black;
+h4 {
+  color: burlywood;
 }
 
 footer {
-    background-color: black;
-    color: white;
-    height: 5%;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    list-style-type: none;
-    margin-top: 1.5vh;
-    display: inline;
-    padding-right: 5rem;
-    padding-left: 5rem;
+  background-color: black;
+  color: white;
+  height: 5%;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  list-style-type: none;
+  margin-top: 1.5vh;
+  display: inline;
+  padding-right: 5rem;
+  padding-left: 5rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 ul {
-    list-style-type: none;
-    margin-top: 1.5vh;
-    display: inline;
-    padding-right: 5rem;
-    padding-left: 5rem;
+  list-style-type: none;
+  margin-top: 1.5vh;
+  display: inline;
+  padding-right: 5rem;
+  padding-left: 5rem;
 }
 
-li{
-    display: inline;
-    text-align: center;   
+li {
+  display: inline;
+  text-align: center;
 }
-
-
+/*# sourceMappingURL=style.css.map */
